--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://arran4.github.io/githubpages/'
 languageCode = 'en-us'
 title = 'Arrans Github Pages'
